--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -217,7 +217,7 @@ transition: box-shadow .4s;
 @media screen and (min-width: 1150px){
   .nav__menu{
     position: fixed;
-    top: 0;
+    top: -100%;
     left: 0;
     border-color: hsla(0, 0, 0, .75);
     width: 100%;
@@ -304,6 +304,7 @@ nav.nav__title{
   right: 1.5rem;
   cursor: pointer;
 }
+
 /* Show menu */
 
 
