--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -224,7 +224,7 @@ transition: box-shadow .4s;
     padding-block: 1.8rem 5rem;
     text-align: center;
     backdrop-filter: blur(8px);
-    transition: top .4;
+    transition: top .4s;
   }
 }
 
@@ -306,7 +306,9 @@ transition: box-shadow .4s;
 }
 
 /* Show menu */
-
+.show-menu{
+  top: 0;
+}
 
 /* Add shadow header */
 
