--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -317,8 +317,39 @@ transition: box-shadow .4s;
 
 
 /*=============== HOME ===============*/
+.home__container{
+  padding-top: 2rem;
+}
 
+.home__name{
+  font-size: var(--biggest-font-size);
+  text-align: center;
+}
 
+home__prefill{
+  position: relative;
+  justify-self: center;
+}
+
+.home__image{
+  width: 220px;
+}
+
+.home__img{
+  position: relative;
+  z-index: 10;
+}
+
+.home__shadow{
+  width: 100%;
+  height: 100%;
+  background-color: var(--container-color);
+  position: absolute;
+  bottom: -0.75rem;
+  right: -0.75em;
+  border: 4px solid var(--black-color);
+  z-index: 5;
+}
 /* Animate scroll icon */
 
 
