--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -349,7 +349,43 @@ home__prefill{
   right: -0.75em;
   border: 4px solid var(--black-color);
   z-index: 5;
+  transition: background-color .4s;
 }
+
+.home__arrow,
+.home__line{
+  position: absolute;
+  filter: invert(1);
+  width: 50px;
+  transition: filter .4s;
+}
+
+.home__arrow{
+  left: 40%;
+  bottom: -4rem;
+}
+
+.home__line{
+  right: -2rem;
+  bottom: -0.5rem;
+}
+
+.home__prefil .geometric-box{
+  top: 2.5rem;
+  left: -0.7rem;
+  z-index: 10;
+}
+
+.home__social{
+  height: max-content;
+  position: absolute;
+  left: -3rem;
+  top: 0;bottom: 0;margin: auto 0;
+  display: grid;
+  row-gap: 1rem;
+}
+
+
 /* Animate scroll icon */
 
 
