--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -380,12 +380,36 @@ home__prefill{
   height: max-content;
   position: absolute;
   left: -3rem;
-  top: 0;bottom: 0;margin: auto 0;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
   display: grid;
   row-gap: 1rem;
 }
 
+.home__social-link{
+  background-color: var(--black-color);
+  color: var(--white-color);
+  font-size: 1.25rem;
+  padding: 6px;
+  display: grid;
+  place-items: center;
+  transition: background-color .3s;
+}
 
+.home__social-link:hover{
+  background-color: var(--black-color);
+}
+
+.home__info{
+  margin-top: 4rem;
+}
+
+.home__description{
+  text-align: center;
+  color: var(--title-color);
+  margin-bottom: 1.5rem;
+}
 /* Animate scroll icon */
 
 
