--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -333,16 +333,19 @@ transition: box-shadow .4s;
 
 .home__image{
   width: 220px;
+  position: relative;
 }
 
 .home__img{
+  width: 100%;
+  height: auto;
   position: relative;
   z-index: 10;
 }
 
 .home__shadow{
-  width: 100%;
-  height: 100%;
+  width: 220px;
+  height: auto;
   background-color: var(--container-color);
   position: absolute;
   bottom: -0.75rem;
