--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -430,6 +430,19 @@ transition: box-shadow .4s;
 .home__scroll-text{
   display: none;
 }
+
+.home__scroll-box{
+  background-color: var(--black-color);
+  color: var(--white-color);
+  width: 36px;
+  height: 36px;
+  display: grid;
+  place-items: center;
+  font-size: 1rem;
+  cursor: pointer;
+  overflow: hidden;
+  transition: background-color .4s;
+}
 /* Animate scroll icon */
 
 
