--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -311,7 +311,9 @@ transition: box-shadow .4s;
 }
 
 /* Add shadow header */
-
+.shadow-header{
+  box-shadow: 0 1px 16px hsla(0, 0, 0, .12);
+}
 
 /* Active link */
 
