--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -219,10 +219,10 @@ transition: box-shadow .4s;
     position: fixed;
     top: -100%;
     left: 0;
-    border-color: hsla(0, 0, 0, .75);
+    border-color: hsla(0, 0%, 0%, 0.75);
     width: 100%;
     padding-block: 1.8rem 5rem;
-    text-align: center;
+    text-align: justify right;
     backdrop-filter: blur(8px);
     transition: top .4s;
   }
