--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -222,7 +222,7 @@ transition: box-shadow .4s;
     border-color: hsla(0, 0%, 0%, 0.75);
     width: 100%;
     padding-block: 1.8rem 5rem;
-    text-align: right;
+    text-align: center;
     backdrop-filter: blur(8px);
     transition: top .4s;
   }
