--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -345,8 +345,8 @@ transition: box-shadow .4s;
 }
 
 .home__shadow{
-  width: 220px;
-  height: 165px;
+  width: 100%;
+  height: 80%;
   background-color: var(--container-color);
   position: absolute;
   bottom: 3rem;
