--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -500,6 +500,11 @@ transition: box-shadow .4s;
   right: 1rem;
   bottom: -1.5rem;
   padding: 1rem;
+  background-color: var(--black-color);
+  color: var(--white-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .projects__subtitle{
