--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -440,9 +440,14 @@ transition: box-shadow .4s;
   transition: background-color .4s;
 }
 
+.ri-arrow-down-s-line {
+
+}
+
 .home__scroll-box i{
+  font-size: 10px; /* Adjust size as needed */
+  color: var(--white-color); /* Adjust color as needed */
   animation: scroll-down 3s infinite;
-  color: var(--white-color); /* Ensure the arrow is white */
 }
 
 .home__scroll{
