--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -223,8 +223,7 @@ transition: box-shadow .4s;
     width: 100%;
     padding-block: 1.8rem 5rem;
     text-align: center;
-    color: var(--black-color-light);
-    opacity: 0.2;
+    color: rgba(0, 0, 0, 0.3);
     transition: top .4s;
   }
 }
