--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -223,7 +223,7 @@ transition: box-shadow .4s;
     width: 100%;
     padding-block: 1.8rem 5rem;
     text-align: center;
-    color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     transition: top .4s;
   }
 }
