--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,6 +68,8 @@ body {
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
+  display: flex;
+  justify-content: center;
 }
 
 h1, h2, h3, h4 {
