--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -172,6 +172,8 @@ img {
 
 /*=============== HEADER & NAV ===============*/
 .header{
+display: flex;
+justify-content: center;
 position: fixed;
 width: 100%;
 top: 0;
@@ -181,12 +183,16 @@ z-index: var(--z-fixed);
 transition: box-shadow .4s;
 }
 
-.nav{
+.nav {
   position: relative;
   height: var(--header-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
+  padding: 0 1.5rem;
 }
 
 .nav__logo{
@@ -344,6 +350,7 @@ transition: box-shadow .4s;
 
 .home__img{
   height: auto;
+  width: auto;
   position: relative;
   z-index: 10;
 }
