--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -107,6 +107,7 @@ img {
 .container {
   max-width: 1920px;
   margin-inline: 1.5rem;
+  width: 100%;
 }
 
 .grid {
@@ -222,7 +223,7 @@ transition: box-shadow .4s;
 }
 /* Navigation for mobile devices */
 
-@media screen and (max-width: 1920px){
+@media screen and (max-width: 768px){
   .nav__menu{
     position: fixed;
     top: -100%;
@@ -401,6 +402,7 @@ transition: box-shadow .4s;
   margin: auto 0;
   display: grid;
   row-gap: 1rem;
+  font-size: 2rem;
 }
 
 .home__social-link{
