--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -233,6 +233,7 @@ transition: box-shadow .4s;
     padding-block: 1.8rem 5rem;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
     transition: top .4s;
   }
 }
