--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,6 +70,7 @@ body {
   color: var(--text-color);
   display: flex;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4 {
@@ -105,14 +106,14 @@ img {
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-  max-width: 1920px;
-  margin-inline: 1.5rem;
-  width: 100%;
+  max-width: 100%; 
+  margin: 0 auto; 
+  padding: 0 1.5rem;
 }
-
 .grid {
   display: grid;
   gap: 1.5rem;
+  grid-template-columns: 1fr;
 }
 
 .section {
@@ -223,7 +224,7 @@ transition: box-shadow .4s;
 }
 /* Navigation for mobile devices */
 
-@media screen and (max-width: 1920px){
+@media screen and (max-width: 768px){
   .nav__menu{
     position: fixed;
     top: -100%;
@@ -235,6 +236,21 @@ transition: box-shadow .4s;
     background-color: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     transition: top .4s;
+  }
+  .container {
+    padding: 0 1rem; /* Adjust padding for smaller screens */
+  }
+
+  .home__image {
+    width: 100%; /* Ensure the image takes the full width of the container */
+    left: 0; /* Reset the left position */
+  }
+
+  .home__shadow {
+    width: 100%;
+    height: 100%;
+    bottom: -0.5rem; /* Adjust the bottom position */
+    right: -0.5rem; /* Adjust the right position */
   }
 }
 
@@ -345,9 +361,9 @@ transition: box-shadow .4s;
 }
 
 .home__image{
-  width: 33%;
+  width: 100%;
   position: relative;
-  left: 80%;
+  left: 0;
 }
 
 .home__img{
@@ -359,10 +375,10 @@ transition: box-shadow .4s;
 
 .home__shadow{
   width: 100%;
-  height: 89%;
+  height: 100%;
   background-color: var(--container-color);
   position: absolute;
-  bottom: 3rem;
+  bottom: -0.75rem;
   right: -0.75rem;
   border: 4px solid var(--black-color);
   z-index: 5;
