--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -383,23 +383,24 @@ transition: box-shadow .4s;
 .home__image{
   width: 100%;
   position: relative;
-  left: 0;
+  justify-content: right;
 }
 
 .home__img{
+  display: block;
   height: auto;
-  width: auto;
+  width: 100%;
   position: relative;
   z-index: 10;
 }
 
 .home__shadow{
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: var(--container-color);
-  position: absolute;
-  bottom: -0.75rem;
-  right: -0.75rem;
   border: 4px solid var(--black-color);
   z-index: 5;
   transition: background-color .4s;
