--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -383,7 +383,6 @@ transition: box-shadow .4s;
 .home__image{
   width: 100%;
   position: relative;
-  justify-content: right;
 }
 
 .home__img{
@@ -395,7 +394,7 @@ transition: box-shadow .4s;
 }
 
 .home__shadow{
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
