--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -377,7 +377,7 @@ transition: box-shadow .4s;
 .home__prefill{
   position: relative;
   justify-self: right;
-  margin-right: 10%;
+  margin-right: 0%;
 }
 
 .home__image {
@@ -395,8 +395,8 @@ transition: box-shadow .4s;
 
 .home__shadow {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 1.5rem;
+  left: 1.5rem;
   width: 100%;
   height: 100%;
   background-color: var(--container-color);
