--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -382,7 +382,7 @@ transition: box-shadow .4s;
 
 .home__image {
   position: relative;
-  width: 100%; /* Ensure the image container takes the full width */
+  width: 40%; /* Ensure the image container takes the full width */
 }
 
 .home__img {
@@ -395,8 +395,8 @@ transition: box-shadow .4s;
 
 .home__shadow {
   position: absolute;
-  top: 1.5rem;
-  left: 1.5rem;
+  top: 10%;
+  left: 10%;
   width: 100%;
   height: 100%;
   background-color: var(--container-color);
