--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,6 +64,8 @@ html {
 }
 
 body {
+  max-width: 1920px; /* Adjust this value as needed */
+  margin: 0 auto; /* Center the body */
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
@@ -365,26 +367,37 @@ transition: box-shadow .4s;
 
 
 /*=============== HOME ===============*/
-.home__container{
+.home__container {
   padding-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.home__name{
+/* Home name */
+.home__name {
   font-size: var(--biggest-font-size);
   text-align: center;
 }
 
-.home__prefill{
+/* Home prefill */
+.home__prefill {
   position: relative;
-  justify-self: right;
-  margin-right: 0%;
+  width: 100%;
+  max-width: 1200px; /* Match the body's max width */
+  margin: 0 auto; /* Center the element */
+  display: flex;
+  justify-content: flex-end; /* Align content to the right */
 }
 
+/* Home image */
 .home__image {
   position: relative;
-  width: 40%; /* Ensure the image container takes the full width */
+  width: 40%; /* Adjust the width as needed */
 }
 
+/* Home image properties */
 .home__img {
   display: block;
   width: 100%; /* Ensure the image takes the full width of the container */
@@ -393,10 +406,11 @@ transition: box-shadow .4s;
   z-index: 10;
 }
 
+/* Home shadow properties */
 .home__shadow {
   position: absolute;
-  top: 4%;
-  left: 4%;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: var(--container-color);
