--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -258,19 +258,6 @@ transition: box-shadow .4s;
   .container {
     padding: 0 1rem; /* Adjust padding for smaller screens */
   }
-
-  .home__image {
-    width: 100%; /* Ensure the image takes the full width of the container */
-    left: 0; /* Reset the left position */
-  }
-
-  .home__shadow {
-    width: 100%;
-    height: 100%;
-    bottom: -0.5rem; /* Adjust the bottom position */
-    right: -0.5rem; /* Adjust the right position */
-  }
-
   .show-menu .nav__menu {
     top: 0; /* Show the menu when active */
   }
@@ -418,6 +405,21 @@ transition: box-shadow .4s;
   z-index: 5;
   transition: background-color .4s;
 }
+
+@media screen and (max-width: 768px){
+  .home__image {
+    width: 60%; /* Ensure the image takes the full width of the container */
+    left: 5%; /* Reset the left position */
+  }
+
+  .home__shadow {
+    width: 100%;
+    height: 100%;
+    bottom: 5%; /* Adjust the bottom position */
+    right: 5%; /* Adjust the right position */
+  }
+}
+
 
 .home__arrow,
 .home__line{
