--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -184,7 +184,7 @@ position: fixed;
 width: 100%;
 top: 0;
 left: 0;
-background-image: linear-gradient(180deg, hsl(0, 0%, 75%, 1), 90%, hsl(0, 0%, 75%, 0));
+background-image: linear-gradient(180deg, var(--body-color), 90%, hsl(0, 0%, 75%, 0));
 z-index: var(--z-fixed);
 transition: box-shadow .4s;
 }
