--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -235,7 +235,7 @@ transition: box-shadow .4s;
     display: none; /* Hide the menu by default */
   }
 
-  .show-menu .nav__menu {
+  .nav.show-menu .nav__menu {
     display: block; /* Show the menu when active */
   }
 }
