--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -248,6 +248,10 @@ transition: box-shadow .4s;
 /* Navigation for mobile devices */
 
 @media screen and (max-width: 768px){
+  body{
+    padding-top: 5rem
+  }
+
   .nav__menu{
     position: fixed;
     top: -100%;
