--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -477,17 +477,11 @@ transition: box-shadow .4s;
   transition: background-color .3s;
 }
 
+
 .home__social-link:hover{
-  background-color: var(--black-color) ;
+  background-color: var(--container-color) ;
 }
 
-[class^="ri-"], [class*=" ri-"] {
-  color: var(--white-color);
-  font-family: 'remixicon';
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
 .home__info{
   margin-top: 4rem;
