--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -387,6 +387,32 @@ transition: box-shadow .4s;
   justify-content: flex-end; /* Align content to the right */
 }
 
+.home__social{
+  height: max-content;
+  position: absolute;
+  left: -5rem;
+  top: 11rem;
+  bottom: 0;
+  margin: auto 0;
+  display: grid;
+  row-gap: 1rem;
+  font-size: 2rem;
+}
+
+.home__social-link{
+  background-color: var(--black-color) ;
+  color: var(--white-color) ;
+  font-size: 1.25rem;
+  padding: 6px;
+  display: grid;
+  place-items: center;
+  transition: background-color .3s;
+}
+
+.home__social-link:hover{
+  background-color: var(--container-color) ;
+}
+
 /* Home image */
 .home__image {
   position: relative;
@@ -413,6 +439,19 @@ transition: box-shadow .4s;
   border: 4px solid var(--black-color);
   z-index: 5;
   transition: background-color .4s;
+}
+
+/* Media queries for larger screens */
+@media screen and (min-width: 769px) {
+  .home__social {
+    left: calc(100% + 1rem); /* Adjust the left position to be consistent with the image */
+    top: 50%; /* Center vertically */
+    transform: translateY(-50%); /* Center vertically */
+  }
+
+  .home__image {
+    width: 40%; /* Adjust the width as needed */
+  }
 }
 
 @media screen and (max-width: 768px){
@@ -454,34 +493,6 @@ transition: box-shadow .4s;
   left: -0.7rem;
   z-index: 10;
 }
-
-.home__social{
-  height: max-content;
-  position: absolute;
-  left: -5rem;
-  top: 11rem;
-  bottom: 0;
-  margin: auto 0;
-  display: grid;
-  row-gap: 1rem;
-  font-size: 2rem;
-}
-
-.home__social-link{
-  background-color: var(--black-color) ;
-  color: var(--white-color) ;
-  font-size: 1.25rem;
-  padding: 6px;
-  display: grid;
-  place-items: center;
-  transition: background-color .3s;
-}
-
-
-.home__social-link:hover{
-  background-color: var(--container-color) ;
-}
-
 
 .home__info{
   margin-top: 4rem;
