--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -550,11 +550,19 @@ transition: box-shadow .4s;
 
 
 /*=============== ABOUT ===============*/
-.about__img{
+.about__prefil{
   position: relative;
   justify-content: left;
-  width: 40%;
+  width: 30%;
   margin: 2rem;
+}
+
+@media screen and (max-width: 768px){
+  .about__prefil{
+    width: 50%;
+    margin: 1rem;
+  }
+  
 }
 
 /*=============== SERVICES ===============*/
