--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -553,23 +553,28 @@ transition: box-shadow .4s;
 /*=============== ABOUT ===============*/
 .about__container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 65% 35%;
     gap: 2rem;
 }
 
-.about__prefil{
-  position: relative;
-  justify-content: left;
-  width: 30%;
-  margin: 2rem;
+.about__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-@media screen and (max-width: 768px){
-  .about__prefil{
-    width: 50%;
-    margin: 1rem;
-  }
-  
+.about__prefil {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.about__image {
+    position: relative;
+    width: 100%;
+    height: auto;
 }
 
 .about__shadow {
@@ -603,6 +608,8 @@ transition: box-shadow .4s;
 .about__img {
     position: relative;
     z-index: 10;
+    width: 100%;
+    height: auto;
 }
 
 /*=============== SERVICES ===============*/
