--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -365,6 +365,11 @@ transition: box-shadow .4s;
 
 
 /*=============== HOME ===============*/
+.home {
+  position: relative;
+  text-align: center;
+}
+
 .home__container {
   display: flex;
   justify-content: center;
@@ -372,10 +377,12 @@ transition: box-shadow .4s;
   flex-direction: column;
 }
 
-/* Home name */
 .home__name {
-  font-size: var(--biggest-font-size);
-  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 1rem;
 }
 
 /* Home prefill */
