--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -388,7 +388,7 @@ transition: box-shadow .4s;
 
 .home__name {
   position: absolute;
-  top: 0;
+  top: 3rem;
   left: 50%;
   transform: translateX(-50%);
   font-size: var(--biggest-font-size);
@@ -644,7 +644,7 @@ transition: box-shadow .4s;
 
 .section__title-1 {
     position: absolute;
-    top: 0;
+    top: 3rem;
     left: 50%;
     transform: translateX(-50%);
     margin-top: 1rem;
