--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -252,7 +252,10 @@ transition: box-shadow .4s;
   .nav__toggle {
     display: none;
   }
-
+  .nav__list-desktop {
+    display: -webkit-inline-box;
+    gap: 1rem;
+}
 }
 
 
@@ -262,9 +265,8 @@ transition: box-shadow .4s;
   body{
     padding-top: 0rem
   }
-
-  .nav__list-desktop {
-    display: none; /* Hide the desktop nav list */
+  .nav__list-desktop{
+    display: none
   }
   .nav__menu{
     position: fixed;
@@ -279,7 +281,7 @@ transition: box-shadow .4s;
     overflow: hidden;
   }
   .container {
-    padding: 0 1rem; /* Adjust padding for smaller screens */
+    padding: 1rem 1rem; /* Adjust padding for smaller screens */
   }
   .show-menu .nav__menu {
     top: 0; /* Show the menu when active */
@@ -296,6 +298,7 @@ transition: box-shadow .4s;
     row-gap: 2.5rem;
   }
 }
+
 
 .nav__title,
 .nav__name,
@@ -853,24 +856,6 @@ transition: box-shadow .4s;
   transform: translateY(0);
 }
 
-/* Add this CSS inside the <head> section */
-@media (min-width: 768px) {
-    .nav__list-desktop {
-        display: flex;
-        gap: 20px;
-        margin-left: auto;
-    }
-    .nav__list-desktop .nav__item {
-        list-style: none;
-    }
-    .nav__list-desktop .nav__link {
-        text-decoration: none;
-        color: #000;
-    }
-    .nav__list-desktop{
-        display: none
-    }
-}
 .contact__popup {
    display: none;
    position: fixed;
