--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -850,15 +850,23 @@ transition: box-shadow .4s;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-.projects__card--hover .projects__description {
+.projects__description {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    color: var(--white-color);
+    padding: 1rem;
+    box-sizing: border-box;
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out;
     opacity: 0;
-    transition: opacity 0.3s, transform 0.3s;
-    transform: translateY(20px);
 }
 
-.projects__card--hover:hover .projects__description {
-    opacity: 1;
+.projects__card:hover .projects__description {
     transform: translateY(0);
+    opacity: 1;
 }
 
 /*=============== CONTACT ===============*/
